fix start wrap

--- a/assets/scss/comm.scss
+++ b/assets/scss/comm.scss
@@ -32,6 +32,7 @@ body {
 .start-wrap {
   width: 100%;
   height: 100vh;
+  display: none;
 }
 .loader {
   opacity: 0;
